--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 2px solid #8a2b06;
+  border-bottom: 2px solid #D3212C;
   padding: 1rem 0;
   margin: 1rem 0;
 }
@@ -13,7 +13,7 @@
 }
 
 .summary {
-  width: 10rem;
+  width: 14rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -21,7 +21,12 @@
 
 .price {
   font-weight: bold;
-  color: #8a2b06;
+  color: #ED904C;
+}
+
+.totalItemPrice {
+  font-weight: bold;
+  color: #FF681E;
 }
 
 .amount {
@@ -47,8 +52,8 @@
   font: inherit;
   font-weight: bold;
   font-size: 1.25rem;
-  color: #8a2b06;
-  border: 1px solid #8a2b06;
+  color: #D3212C;
+  border: 1px solid #D3212C;
   width: 3rem;
   text-align: center;
   border-radius: 6px;
@@ -60,6 +65,6 @@
 
 .cart-item button:hover,
 .cart-item button:active {
-  background-color: #8a2b06;
+  background-color: #D3212C;
   color: white;
 }
