--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 5rem;
-  background-color: #8a2b06;
+  background-color: #ED904C;
   color: white;
   display: flex;
   justify-content: space-between;
@@ -16,14 +16,16 @@
 
 .main-image {
   width: 100%;
-  height: 25rem;
-  z-index: 0;
-  overflow: hidden;
+  height: 34rem;  
+  background-image: url(//cdn2.editmysite.com/images/editor/theme-background/stock/Cooking.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.main-image img {
+/* .main-image img {
   width: 110%;
   height: 100%;
   object-fit: cover;
   transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
-}
+} */
