--- a/src/components/Meals/MealItem/MealItemForm.module.css
+++ b/src/components/Meals/MealItem/MealItemForm.module.css
@@ -5,8 +5,8 @@
 .form button {
   font: inherit;
   cursor: pointer;
-  background-color: #8a2b06;
-  border: 1px solid #8a2b06;
+  background-color: #5D966D;
+  border: 1px solid #5D966D;
   color: white;
   padding: 0.25rem 2rem;
   border-radius: 20px;
@@ -15,6 +15,6 @@
 
 .form button:hover,
 .form button:active {
-  background-color: #641e03;
-  border-color: #641e03;
+  background-color: #3D6160;
+  border-color: #3D6160;
 }
