--- a/src/components/Meals/MealsSummary.module.css
+++ b/src/components/Meals/MealsSummary.module.css
@@ -5,7 +5,7 @@
   margin: auto;
   margin-top: -10rem;
   position: relative;
-  background-color: #383838;
+  background-color: #3D6160;
   color: white;
   border-radius: 14px;
   padding: 1rem;
